# Bachelors-explainability

./: .gitignore  README.md  data_download_commands.txt  finetune.sh  initial_file.ipynb  model_eval.ipynb  preprocess_downstream.sh  pretrain.sh  pretrain_2.sh  pyproject.toml  pytorch_lightning_tests.ipynb  requirements.txt  setupfile_disabled.py  temp.ipynb  torch_test.py
configs/: pretrain_bendr_standardize_downstream.yaml  pretrain_ica_standardize_downstream.yaml  pretrain_noica_standardize_downstream.yaml
configs/finetune/: bci_bendr_bendr_5.0.yaml  bci_bendr_bendr_5.0_rename.yaml  bci_bendr_bendr_6.0.yaml  bci_bendr_bendr_6.0_rename.yaml  bci_bendr_ica_5.0.yaml  bci_bendr_ica_5.0_rename.yaml  bci_bendr_ica_6.0.yaml  bci_bendr_ica_6.0_rename.yaml  bci_bendr_noica_5.0.yaml  bci_bendr_noica_5.0_rename.yaml  bci_bendr_noica_6.0.yaml  bci_bendr_noica_6.0_rename.yaml  bci_ica_bendr_5.0.yaml  bci_ica_bendr_5.0_rename.yaml  bci_ica_bendr_6.0.yaml  bci_ica_ica_5.0.yaml  (+88 more)
eegatscale/: __init__.py  datasets.py  layers.py  transforms.py  utils.py
experiments/: pretrain_bendr_all.sh  pretrain_ica_all.sh  pretrain_noica_all.sh
notebooks/: cli_test.py  data_tests.ipynb  initial_file.ipynb  metrics_analysis.ipynb  read_preprocess_file_test.ipynb  tests.ipynb  utils.py
preprocessing/: pipeline_downstream.py  utils.py
scripts/: dataset_analysis.py  finetune.py  finetune_cv.py  finetune_cv_nogroups.py  hdf5_combiner.py  preprocess.py  preprocess_downstream.py  preprocess_old.py  pretrain.py  process.py  test.py
tcav/: copy_file_subsets.ipynb
tests/: test_datasets.py
(+549 files in other folders)
